--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           <input type="text" id="input-field" placeholder="Password" />
           <p>Copy Icon</p>
         </div>
+
+        <!-- ============ Button =========== -->
+        <div class="button-container">
+          <button id="button">Generate Password</button>
+        </div>
       </section>
     </main>
     <script src="app.js"></script>
