:bulb: set css class and id

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <main class="main-container">
       <!-- ============== Title ============== -->
-      <header>
-        <h1>Random Password App</h1>
+      <header class="banner">
+        <h2 class="banner-text">Generate a</h2>
+        <h1 class="title">Random Password</h1>
       </header>
       <!-- ========== input part ========== -->
       <section class="container">
