:books: design banner text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <header class="banner">
         <h2 class="banner-text">Generate a</h2>
         <h1 class="title">Random Password</h1>
+        <!-- ======= under line ======= -->
+        <div class="line"></div>
       </header>
       <!-- ========== input part ========== -->
       <section class="container">
