:bulb: set input field

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           <div class="copy-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              width="28"
+              height="28"
               viewBox="0 0 24 24"
             >
               <path
-                fill="none"
+                fill="#019f55"
                 stroke="currentColor"
                 stroke-linecap="round"
                 stroke-linejoin="round"
