:bulb: set button

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <button id="button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              width="30"
+              height="30"
               viewBox="0 0 24 24"
             >
-              <g fill="none">
+              <g fill="#fff">
                 <path
                   fill="url(#tokenBrandedZap0)"
                   d="M13.152 9.188V3.71c.027-.135-.024-.456-.444-.653c-.366-.172-.765.083-.885.247c-1.825 2.917-5.233 9.051-5.366 9.36c-.169.389-.054.631.106.81c.119.134.403.214.555.214h3.705l-.79 6.7c.01.155.14.49.564.592c.425.101.717-.205.81-.37l6.057-10.25c.088-.135.27-.494.076-.81a.78.78 0 0 0-.7-.362z"
@@ -63,8 +63,8 @@
                     y2="21"
                     gradientUnits="userSpaceOnUse"
                   >
-                    <stop stop-color="#087ffe" />
-                    <stop offset="1" stop-color="#50c0fe" />
+                    <stop stop-color="#f2f2f2" />
+                    <stop offset="1" stop-color="#f2f2f2" />
                   </linearGradient>
                 </defs>
               </g>
