:bulb: implement generate password

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- ============ Button =========== -->
         <div class="button-container">
-          <button id="button">
+          <button id="button" onclick="createPassword()">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="30"
