:tada: implemented copy password

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <!-- =========== input field =========== -->
           <input type="text" id="input-field" placeholder="Password" />
           <!-- ========= Copy Icon ========== -->
-          <div class="copy-icon">
+          <div class="copy-icon" onclick="copyPassWord()">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="28"
